# PythonTest

./: .gitignore  README.md
201407_NJU/Exam/: 2_2.py  2_4.py  2_5.py  2_6.py  3_1.py  3_2.py
201407_NJU/Part_A/: A_1.py
201407_NJU/Part_C/: C_8.py
201407_NJU/Part_D/: D_1.py  D_2.py  D_3.py  test_D_1_source.txt  test_D_2_source.py  test_D_3_result.py
201407_NJU/Part_E/: E_2.py  E_3.py  E_4.py  E_5.py  E_6.py
201407_NJU/Part_F/: F_1.py  F_2.py  F_3.py
201407_NJU/Part_G/: cmdqueryclient.py  food.db  food_query.py  guiqueryclient.py  importdata.py  queryserver.py  result.txt
2024_AI/0521/: 02-Python中的单行注释.py  03-Python中的多行注释.py  04-Python中变量定义.py  05-Python中的变量命名规则.py  06-Python中变量7种数据类型.py  07-Python中运算符.py  08-Python中的输入操作.py  09-Python中的普通输出操作.py  10-Python中变量的格式化输出.py  11-Python中的转义字符.py
2024_AI/0523/: 01-Python中的编程语言的流程结构.py  02-Python中的选择结构.py  03-Python中的if...else选择结构.py  04-Python中的if...else选择结构.py  05-Python中if...elif...else结构.py  06-Python中if嵌套结构.py  07-Python中猜拳游戏实现.py  08-Python中的模块.py  09-Python中的循环结构.py  10-Python中实现指定次数的循环.py  11-Python中实现求1-100累加的结果.py  12-Python中循环的两大关键词.py  13-Python中猜数字游戏的开发.py  14-Python中的列表容器.py  15-Python中列表的其他操作.py  16-Python中列表的切片操作（字符串元组也可以使用）.py  17-Python中元组的定义与使用.py  18-Python中的字典类型.py  19-Python中的集合类型.py
2024_AI/0526/: 01-Python函数的基本概念.py  02-Python中函数的参数.py  (+32 more)
MyTest/: test.py  test0001.py  verification_code.py
llm-test/: mimo-v2-tts-test.py  pyproject.toml  story-original.txt
mcp-demo/: .gitignore  README.md  agent.py  demo_local.py  mcp_client.py  mcp_server.py  pyproject.toml  skill_agent.py
