[project]
name = "mcp-demo"
version = "0.1.0"
description = "A simple demonstration of LLM Agent with MCP (Model Context Protocol)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
]

[tool.setuptools]
py-modules = ["agent", "demo_local", "mcp_client", "mcp_server"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
